feat: form creation

--- a/src/components/new_document.html
+++ b/src/components/new_document.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,85 +8,77 @@
     <link href="../../dist/output.css" rel="stylesheet">
     <script src='main.js'></script>
 </head>
-<body>
-    <div class="bg-gray-100 mx-auto max-w-6xl bg-white py-20 px-12 lg:px-24 shadow-xl mb-24">
-        <form>
-          <div class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4 flex flex-col">
-            <div class="-mx-3 md:flex mb-6">
-              <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="company">
-                  Company Name*
-                </label>
-                <input class="w-full bg-gray-200 text-black border border-gray-200 rounded py-3 px-4 mb-3" id="company" type="text" placeholder="Tutsplus">
-                <div>
-                  <span class="text-red-500 text-xs italic">
-                    Please fill out this field.
-                  </span>
-                </div>
-              </div>
-              <div class="md:w-1/2 px-3">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="title">
-                  Title*
-                </label>
-                <input class="w-full bg-gray-200 text-black border border-gray-200 rounded py-3 px-4 mb-3" id="title" type="text" placeholder="Software Engineer">
-              </div>
+<body class="flex flex-row h-full w-full">
+
+  <div class="bg-blue-200 h-full w-1/2">left</div>
+  
+    <div class="bg-red-200 h-full w-1/2 flex items-center">
+      <div class="w-full">
+        <h2 class="text-center text-blue-400 font-bold text-2xl uppercase mb-10">Document</h2>
+        <div class="bg-white p-10 rounded-lg shadow md:w-10/12 mx-auto lg:w-9/12">
+          <form action="">
+            <div class="mb-5">
+              <label for="name" class="block mb-2 font-bold text-gray-600">Name</label>
+              <input type="text" id="name" name="name" placeholder="Put in your fullname." class="border border-gray-300 shadow p-3 w-full rounded mb-">
             </div>
-            <div class="-mx-3 md:flex mb-6">
-              <div class="md:w-full px-3">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="application-link">
-                  Application Link*
-                </label>
-                <input class="w-full bg-gray-200 text-black border border-gray-200 rounded py-3 px-4 mb-3" id="application-link" type="text" placeholder="http://....">
-              </div>
+   
+            <div class="mb-5">
+              <label for="twitter" class="block mb-2 font-bold text-gray-600">Twitter</label>
+              <input type="text" id="twitter" name="twitter" placeholder="Put in your fullname." class="border border-red-300 shadow p-3 w-full rounded mb-">
+              <p class="text-sm text-red-400 mt-2">Twitter username is required</p>
             </div>
-            <div class="-mx-3 md:flex mb-2">
-              <div class="md:w-1/2 px-3 mb-6 md:mb-0">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="location">
-                  Location*
-                </label>
-                <div>
-                  <select class="w-full bg-gray-200 border border-gray-200 text-black text-xs py-3 px-4 pr-8 mb-3 rounded" id="location">
-                    <option>Abuja</option>
-                    <option>Enugu</option>
-                    <option>Lagos</option>
-                  </select>
-                </div>
-              </div>
-              <div class="md:w-1/2 px-3">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="job-type">
-                  Job Type*
-                </label>
-                <div>
-                  <select class="w-full bg-gray-200 border border-gray-200 text-black text-xs py-3 px-4 pr-8 mb-3 rounded" id="job-type">
-                    <option>Full-Time</option>
-                    <option>Part-Time</option>
-                    <option>Internship</option>
-                  </select>
-                </div>
-              </div>
-              <div class="md:w-1/2 px-3">
-                <label class="uppercase tracking-wide text-black text-xs font-bold mb-2" for="department">
-                  Department*
-                </label>
-                <div>
-                  <select class="w-full bg-gray-200 border border-gray-200 text-black text-xs py-3 px-4 pr-8 mb-3 rounded" id="department">
-                    <option>Engineering</option>
-                    <option>Design</option>
-                    <option>Customer Support</option>
-                  </select>
-                </div>
-              </div>
-            </div>
-            <div class="-mx-3 md:flex mt-2">
-              <div class="md:w-full px-3">
-                <button class="md:w-full bg-gray-900 text-white font-bold py-2 px-4 border-b-4 hover:border-b-2 border-gray-500 hover:border-gray-100 rounded-full">
-                  Button
-                </button>
-              </div>
-            </div>
-          </div>
-        </form>
+   
+            <button class="block w-full bg-blue-500 text-white font-bold p-4 rounded-lg">Submit</button>
+          </form>
+        </div>
       </div>
+    </div>
+
+ 
+
+  
+  <!--div class="w-full lg:w-1/2 py-16 px-12">
+    <h2  class="text-3xl mb-4">Register</h2>
+    <p class="mb-4">
+      Create your account. It’s free and only take a minute
+    </p>
+    <form action="#">
+      <div class="grid grid-cols-2 gap-5">
+        <input type="text" placeholder="Firstname" class="border border-gray-400 py-1 px-2">
+        <input type="text" placeholder="Surname" class="border border-gray-400 py-1 px-2">
+      </div>
+      <div class="mt-5">
+        <input type="text" placeholder="Email" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
+      </div>
+      <div class="mt-5">
+        <input type="checkbox" class="border border-gray-400">
+        <span>
+          I accept the <a href="#" class="text-purple-500 font-semibold">Terms of Use</a> &  <a href="#" class="text-purple-500 font-semibold">Privacy Policy</a> 
+        </span>
+      </div>
+      <div class="mt-5">
+        <button class="w-full bg-purple-500 py-3 text-center text-white">Register Now</button>
+      </div>
+    </form>
+  </div-->
     
 </body>
 </html>
