--- a/src/components/login.html
+++ b/src/components/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-full">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,7 +8,7 @@
     <link href="../../dist/output.css" rel="stylesheet">
     <script src='main.js'></script>
 </head>
-<body>
+<body class="h-full">
     <div class="flex justify-center items-center py-20 bg-blue-200 h-screen">
         <div class="form bg-gray-800 lg:w-4/12 md:w-8/12 sm:10/12 w-full  px-12 py-16   font-medium shadow-2xl">
         <h1 class="text-white uppercase text-2xl text-center pb-12">Admin Login</h1>
