feat: navbar modification

--- a/src/components/login.html
+++ b/src/components/login.html
@@ -9,7 +9,7 @@
     <script src='main.js'></script>
 </head>
 <body class="h-full">
-    <div class="flex justify-center items-center py-20 bg-blue-200 h-screen">
+    <div class="flex justify-center items-center py-20 bg-blue-600 h-full">
         <div class="form bg-gray-800 lg:w-4/12 md:w-8/12 sm:10/12 w-full  px-12 py-16   font-medium shadow-2xl">
         <h1 class="text-white uppercase text-2xl text-center pb-12">Admin Login</h1>
         <form action="">
