--- a/src/components/navbar.html
+++ b/src/components/navbar.html
@@ -19,7 +19,24 @@
               <div class="hidden md:block">
                 <div class="ml-10 flex items-baseline space-x-4">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                  <a href="./new_document.html" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">New Document</a>
+                  <button class="relative flex justify-center items-center bg-gray-900 text-white rounded-md pl-2 pr-1 py-2 text-sm font-medium group">
+                    <p>New Document </p>
+                    <span class="pl-2 pt-1.5">
+                      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
+                    </span>
+                    <div class="absolute hidden group-focus:block top-full min-w-full w-max bg-gray-900 shadow-md mt-1 rounded">
+                      <ul class="hidden group-focus-within:block list-none absolute bg-gray-50 w-32 z-1 shadow-lg animate-slideIn">
+                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white">Option 1</li>
+                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white">Option 2</li>
+                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white">Option 3</li>
+                    </ul>
+                    </div>
+
+
+                  </button>
+                  
+                  
+                  <!--a href="./new_document.html" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">New Document</a-->
                   <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">History</a>
                   <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">Search</a>
     
