--- a/src/components/index.html
+++ b/src/components/index.html
@@ -7,7 +7,7 @@
 </head>
 <body class="h-full">
   <iframe class="navbar" src="./navbar.html"></iframe>
-  <iframe class="w-full h-full" src="./new_document.html"></iframe>
+  <!--iframe class="w-full h-full" src="./new_document.html"></iframe-->
 
  
 
