--- a/src/components/index.html
+++ b/src/components/index.html
@@ -6,7 +6,7 @@
   <link href="../../dist/output.css" rel="stylesheet">
 </head>
 <body class="h-full">
-  <iframe class="navbar" src="./navbar.html"></iframe>
+  <iframe class="navbar" src="./nav.html"></iframe>
   <!--iframe class="w-full h-full" src="./new_document.html"></iframe-->
 
  
