--- a/src/components/nav.html
+++ b/src/components/nav.html
@@ -19,22 +19,21 @@
               <div class="hidden md:block">
                 <div class="ml-10 flex items-baseline lg:space-x-4">
                   <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                  <button class="relative flex bg-gray-900 text-white rounded-md pl-2 pr-1 py-2 text-sm font-medium group">
-                    <p>New Document </p>
-                    <span class="pl-2 pt-1.5">
-                      <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
-                    </span>
-                    <div class="absolute hidden group-focus:block top-full min-w-full w-max bg-gray-900 shadow-md mt-1 rounded">
-                      <ul class="hidden group-focus-within:block list-none absolute bg-gray-50 w-32 z-1 shadow-lg animate-slideIn">
-                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white"> <a href="./login.html" >Option 1</a> </li> 
-                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white"> <a >Option 2</a> </li>
-                        <li class="bg-gray-800 px-3 py-2 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white"> <a >Option 3</a> </li>
-                    </ul>
-                    </div>
-
-
-                  </button>
                   
+                  <div class="dropdown inline-block relative">
+                    <button class="relative flex hover:bg-gray-700 text-white rounded-md pl-2 pr-1 py-2 text-sm font-medium">
+                      <span class="px-2">New Document</span>
+                      <span class="border-l pl-2 pt-1.5">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
+                      </span>
+                    </button>
+                    <ul class="dropdown-menu absolute hidden text-gray-700 pt-1 w-32">
+                      <li class="text-center"><a href="./login.html"  class=" bg-gray-800 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white py-2 px-4 block whitespace-no-wrap rounded-t" href="#">Autentica</a></li>
+                      <li class="text-center"><a href="./login.html"  class=" bg-gray-800 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white py-2 px-4 block whitespace-no-wrap" href="#">Autorizacion</a></li>
+                      <li class="text-center"><a href="./login.html"  class=" bg-gray-800 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white py-2 px-4 block whitespace-no-wrap" href="#">Escritura Publica</a></li>
+                      <li class="text-center"><a href="./login.html"  class=" bg-gray-800 text-sm font-medium cursor-pointer text-gray-300 hover:bg-gray-700 hover:text-white py-2 px-4 block whitespace-no-wrap rounded-b" href="#">Documento Privado</a></li>
+                    </ul>
+                  </div>
                   
                   <!--a href="./new_document.html" class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium" aria-current="page">New Document</a-->
                   <a href="./login.html" class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium">History</a>
@@ -49,29 +48,23 @@
     
                 <!-- Profile dropdown -->
                 <div class="relative ml-3">
-                  <div>
+
+                  <div class="dropdown inline-block relative">
                     <button type="button" class="relative flex max-w-xs items-center rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
                       <span class="absolute -inset-1.5"></span>
                       <span class="sr-only">Open user menu</span>
                       <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
                     </button>
+                      <div class=" dropdown-menu hidden absolute right-0 z-10 mt-2 w-32 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
+                        <!-- Active: "bg-gray-100", Not Active: "" -->
+                        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a> 
+                        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a> 
+                        <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a> 
+                      </div>
                   </div>
-                  <!--
-                    Dropdown menu, show/hide based on menu state.
-    
-                    Entering: "transition ease-out duration-100"
-                      From: "transform opacity-0 scale-95"
-                      To: "transform opacity-100 scale-100"
-                    Leaving: "transition ease-in duration-75"
-                      From: "transform opacity-100 scale-100"
-                      To: "transform opacity-0 scale-95"
-                  -->
-                  <div class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1">
-                    <!-- Active: "bg-gray-100", Not Active: "" -->
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a> 
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a> 
-                    <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a> 
-                  </div>
+
+                 
+                
                 </div>
               </div>
             </div>
