feat: changes iframe

--- a/src/components/index.html
+++ b/src/components/index.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../../dist/output.css" rel="stylesheet">
 </head>
-<body class="h-full">
-  <iframe class="navbar" src="./nav.html"></iframe>
-  <!--iframe class="w-full h-full" src="./new_document.html"></iframe-->
-
- 
-
+<body class="h-full" >
+  <iframe class="navbar" src="./navbar.html"></iframe>
+  <iframe title="sda" id="myIframe" class="w-full h-full" src="./login.html"></iframe>
+  
+  
+  <script src="../navbar.js"></script>
 </body>
 </html>
