--- a/src/components/new_document.html
+++ b/src/components/new_document.html
@@ -1,89 +1,100 @@
 <!DOCTYPE html>
 <html class="h-full">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link href="../../dist/output.css" rel="stylesheet">
-    <script src='main.js'></script>
-</head>
-<body >
-
-
-  <div class="h-full bg-blue-400">lefft</div>
-
-  
-  <!--div class="w-full lg:w-1/2 py-16 px-12">
-    <h2  class="text-3xl mb-4">Register</h2>
-    <p class="mb-4">
-      Create your account. It’s free and only take a minute
-    </p>
-    <form action="#">
-      <div class="grid grid-cols-2 gap-5">
-        <input type="text" placeholder="Firstname" class="border border-gray-400 py-1 px-2">
-        <input type="text" placeholder="Surname" class="border border-gray-400 py-1 px-2">
-      </div>
-      <div class="mt-5">
-        <input type="text" placeholder="Email" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="password" placeholder="Confirm Password" class="border border-gray-400 py-1 px-2 w-full">
-      </div>
-      <div class="mt-5">
-        <input type="checkbox" class="border border-gray-400">
-        <span>
-          I accept the <a href="#" class="text-purple-500 font-semibold">Terms of Use</a> &  <a href="#" class="text-purple-500 font-semibold">Privacy Policy</a> 
-        </span>
-      </div>
-      <div class="mt-5">
-        <button class="w-full bg-purple-500 py-3 text-center text-white">Register Now</button>
-      </div>
-    </form>
-
-
-      <div class="bg-blue-200 h-full w-1/2">left</div>
-  
-    <div class="bg-red-200 h-full w-1/2 flex items-center">
-      <div class="w-full">
-        <h2 class="text-center text-blue-400 font-bold text-2xl uppercase mb-10">Document</h2>
-        <div class="bg-white p-10 rounded-lg shadow md:w-10/12 mx-auto lg:w-9/12">
-          <form action="">
-            <div class="mb-5">
-              <label for="name" class="block mb-2 font-bold text-gray-600">Nombre del padre</label>
-              <input type="text" id="name" name="name" placeholder="Put in your fullname." class="border border-gray-300 shadow p-3 w-full rounded mb-">
-            </div>
-   
-            <div class="mb-5">
-              <label for="twitter" class="block mb-2 font-bold text-gray-600">Nombre la madre</label>
-              <input type="text" id="madre" name="twitter" placeholder="Put in your fullname." class="border border-red-300 shadow p-3 w-full rounded mb-">
-              <p class="text-sm text-red-400 mt-2">Twitter username is required</p>
-            </div>
-   
-            <button class="block w-full bg-blue-500 text-white font-bold p-4 rounded-lg">Submit</button>
-          </form>
-        </div>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="../../dist/output.css" rel="stylesheet" />
+    <script src="main.js"></script>
+  </head>
+  <body class="h-full w-full">
+    <div class="flex h-full justify-center items-center py-20 bg-blue-600">
+      <div class=" lg:w-4/12 py-16 px-12 bg-blue-200 h-full">
+        <h2 class="text-3xl mb-4">Register</h2>
+        <p class="mb-4">
+          Create your account. It’s free and only take a minute
+        </p>
+        <form action="#">
+          <div class="grid grid-cols-2 gap-5">
+            <input
+              type="text"
+              placeholder="Firstname"
+              class="border border-gray-400 py-1 px-2"
+            />
+            <input
+              type="text"
+              placeholder="Surname"
+              class="border border-gray-400 py-1 px-2"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="text"
+              placeholder="Email"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input
+              type="password"
+              placeholder="Confirm Password"
+              class="border border-gray-400 py-1 px-2 w-full"
+            />
+          </div>
+          <div class="mt-5">
+            <input type="checkbox" class="border border-gray-400" />
+            <span>
+              I accept the
+              <a href="#" class="text-purple-500 font-semibold">Terms of Use</a>
+              &
+              <a href="#" class="text-purple-500 font-semibold"
+                >Privacy Policy</a
+              >
+            </span>
+          </div>
+          <div class="mt-5">
+            <button class="w-full bg-purple-500 py-3 text-center text-white">
+              Register Now
+            </button>
+          </div>
+        </form>
       </div>
     </div>
-
-
-
-  </div-->
-    
-</body>
+  </body>
 </html>
